--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@tailwindcss/cli": "4.0.0-alpha.15",
+    "@tailwindcss/postcss": "4.0.0-alpha.15",
+    "babel-plugin-react-compiler": "0.0.0-experimental-487cb0e-20240529",
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-38e3b23483-20240529",
+    "react-dom": "19.0.0-rc-38e3b23483-20240529"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "4.0.0-alpha.15",
+    "typescript": "^5"
   }
 }
