--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ next-env.d.ts
 /pnpm-lock.yaml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
+/Github/bruno.json
+/Github/Github repo content.bru
