--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@tailwindcss/cli": "4.0.0-alpha.15",
     "@tailwindcss/postcss": "4.0.0-alpha.15",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "babel-plugin-react-compiler": "0.0.0-experimental-487cb0e-20240529",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-38e3b23483-20240529",
     "react-dom": "19.0.0-rc-38e3b23483-20240529",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
